fixed minor bugs

--- a/src/scss/blocks/action.scss
+++ b/src/scss/blocks/action.scss
@@ -4,6 +4,7 @@
     font-size: $default-font-size;
     font-weight: 600;
     background: none;
+    cursor: pointer;
 
     &--visibility {
         display: none;
